Add blocks ordered list on sport and back massaes pages

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -87,6 +87,9 @@
 
 @use 'blocks/indications/indications';
 
+@use 'blocks/blocks-list/blocks-list';
+@use 'blocks/blocks-list/blocks-list-item';
+
 @use 'blocks/faq/faq';
 
 @use 'blocks/price-list/price-list';
