--- a/src/pug/pages/back-massage.pug
+++ b/src/pug/pages/back-massage.pug
@@ -154,6 +154,35 @@ block variables
           <br>
           Результат будет быстрым, стабильным и безопасным — все виды массажей, которые мы практикуем, одобрены вертебрологами мирового уровня`
       ],
+      blocksList: {
+        title: '6 причин, почему стоит делать массаж именно&nbsp;у&nbsp;нас',
+        items: [
+          {
+            title: 'Эффективная методика, относящаяся к&nbsp;разделу реабилитационной медицины',
+            text: 'Наша методика не имеет ничего общего с&nbsp;жёсткими методами типа «костоправства», или&nbsp;наоборот неэффективными поглаживаниями. У&nbsp;нас&nbsp;— официальный медицинский метод, который действительно лечит'
+          },
+          {
+            title: 'Множество клиентов, которым мы помогли полностью избавиться от боли без операций',
+            text: `Почитайте <a class='link link_primary underline' href='reviews.html'>отзывы</a> клиентов, которым мы помогли, многие из&nbsp;них описывают, насколько изменилась их жизнь после курса массажа. У&nbsp;нас огромная база честных отзывов с&nbsp;2008&nbsp;года`
+          },
+          {
+            title: 'Бесплатная и&nbsp;качественная диагностика на&nbsp;первом же сеансе',
+            text: 'Перед тем как делать массаж, специалист осмотрит вас, проверит все болезненные участки и&nbsp;убедится, что у&nbsp;вас нет противопоказаний. После этого он даст вам всю информацию о&nbsp;здоровье и&nbsp;лечении'
+          },
+          {
+            title: 'Огромный опыт специалистов',
+            text: 'У&nbsp;всех специалистов нашей клиники есть медицинское образование, каждый знает свою работу в&nbsp;совершенстве, и&nbsp;ни&nbsp;в&nbsp;коем случае не&nbsp;навредит вам из-за недостатка знаний. Минимальный стаж специалиста в клинике&nbsp;— 10&nbsp;лет'
+          },
+          {
+            title: 'Полный комфорт во время сеанса',
+            text: 'Специально оборудованный кабинет с&nbsp;профессиональным массажным столом, где вы займёте правильную позу. Спокойная обстановка, соблю&shy;дение всех санитарных норм. Во время процедуры вам не&nbsp;будет неловко или холодно&nbsp;— участки тела, где не&nbsp;идёт массаж, накрываются простынёй&nbsp;'
+          },
+          {
+            title: 'Гарантия возврата денег',
+            text: 'Если после первого сеанса вы поймёте, что вам не&nbsp;подходит наша клиника, мы вернём вам деньги за&nbsp;сеанс без&nbsp;лишних вопросов. Вы ничего не&nbsp;теряете'
+          }
+        ]
+      },
       faq: [
         {
           question: `Я не верю, что массаж может помочь. Зажимы и боль в мышцах это одно дело. Но как он лечит грыжи, сколиоз и прочие заболевания?`,
@@ -194,6 +223,7 @@ block content
   include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
   include ../includes/modules/content/massage-description
+  include ../includes/modules/content/blocks-list
   include ../includes/modules/content/faq
   include ../includes/modules/content/price-list
   include ../includes/modules/content/more-massages
