--- a/src/pug/pages/sports-massage.pug
+++ b/src/pug/pages/sports-massage.pug
@@ -136,7 +136,7 @@ block variables
           },
           {
             title: 'Пройдёт боль после тренировок, последствия травм',
-            text: `Спортивный массаж отлично работает на&nbsp;восстановление после обычных тренировок, а&nbsp;также
+            text: `Спортивный массаж отлично работает на&nbsp;восстановление после обычных трени&shy;ровок, а&nbsp;также
               ставит спортсменов на&nbsp;ноги после травм. Также он значительно снижает риск травмировать мышцы
               и&nbsp;суставы`
           }
@@ -151,6 +151,23 @@ block variables
           <br>
           Спортивный массаж помогает распределить нагрузку равномерно, на каждую мышцу, и вместе с тренировками формирует красивое и здоровое тело`
       ],
+      blocksList: {
+        title: 'Какие бывают виды спортивного массажа',
+        items: [
+          {
+            title: 'Предварительный массаж',
+            text: 'Этот массаж предназначен для&nbsp;разогрева перед тренировкой или соревнованием. Обычно мы не&nbsp;делаем его, так как до&nbsp;зала ещё нужно добраться, а&nbsp;начать тренировку нужно через 10-30&nbsp;минут после сеанса'
+          },
+          {
+            title: 'Тренировочный массаж',
+            text: 'Этот вид массажа по&nbsp;сути является частью тренировки. Он облегчает восстановление мышц и&nbsp;улучшает результат. Этот массаж идеально подойдёт тем, кто занимается в&nbsp;зале, и&nbsp;его лучше делать между тренировками'
+          },
+          {
+            title: 'Восстановительный массаж\n',
+            text: 'Восстановительный массаж делается после тренировок и,&nbsp;чаще всего, курсом. Он благотворно влияет на&nbsp;состояние организ&shy;ма в&nbsp;целом, избавляет мышцы от&nbsp;застоя молочной кислоты, удлиняет фасции, расслабляет и&nbsp;улучшает результаты'
+          }
+        ]
+      },
       faq: [
         {
           question: `Если я не занимаюсь спортом, мне есть смысл идти на этот массаж?`,
@@ -182,6 +199,7 @@ block content
   include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
   include ../includes/modules/content/massage-description
+  include ../includes/modules/content/blocks-list
   include ../includes/modules/content/faq
   include ../includes/modules/content/price-list
   include ../includes/modules/content/more-massages
