--- a/src/assets/scss/blocks/massage-video/massage-video.scss
+++ b/src/assets/scss/blocks/massage-video/massage-video.scss
@@ -69,9 +69,9 @@
         }
       }
 
-      @if ($theme-id == '10') {
+      @if ($theme-id == '10' or $theme-id == '12') {
         &__image {
-          fill: map-deep-get($themes, '10', 'background');
+          fill: map-deep-get($themes, $theme-id, 'background');
         }
       }
     }
