Back massage page missing blocks

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -72,6 +72,8 @@
 @use 'blocks/massage-choosing-test/test-slide';
 @use 'blocks/massage-choosing-test/test-success';
 
+@use 'blocks/back-massage-indications/back-massage-indications';
+
 @use 'blocks/results/massage-results';
 @use 'blocks/results/face-results';
 @use 'blocks/results/back-results';
