--- a/src/assets/scss/blocks/application-form/application-form.scss
+++ b/src/assets/scss/blocks/application-form/application-form.scss
@@ -268,6 +268,14 @@
   }
 }
 
+.theme-12 {
+  .application-form {
+    &__background {
+      background-color: map-deep-get($themes, '12', 'alt-background');
+    }
+  }
+}
+
 @media (min-width: $phone-landscape-min-width) {
   .application-form {
     &__success-text {
