--- a/src/assets/scss/blocks/header/page-header.scss
+++ b/src/assets/scss/blocks/header/page-header.scss
@@ -244,6 +244,14 @@
   }
 }
 
+.theme-12 {
+  .page-header {
+    &::before {
+      background-image: linear-gradient(180deg, #b7e9fd 0%, #f9f9f9 100%);
+    }
+  }
+}
+
 @media (min-width: $phone-landscape-min-width) {
   .page-header {
     padding-bottom: calc(30rem + 15vh);
