--- a/src/pug/pages/back-massage.pug
+++ b/src/pug/pages/back-massage.pug
@@ -12,8 +12,8 @@ block variables
       pageClass: 'back-massage-page',
       theme: '12',
       massage: globalData.massages['back-massage'],
-      mainScreenHeading: 'Лечебный массаж спины',
-      mainScreenSubheading: `Быстрое избавление от&nbsp;боли. Лечение заболеваний позвоночника, мышц и&nbsp;суставов по&nbsp;уникальной методике без&nbsp;операций`,
+      mainScreenHeading: `Лечебный массаж спины`,
+      mainScreenSubheading: `<br class='hidden_mobile-tablet'>Быстрое избавление от&nbsp;боли. Лечение заболеваний позвоночника, мышц и&nbsp;суставов по&nbsp;уникальной методике без&nbsp;операций`,
       mainScreenFeatures: [
         {
           bigText: `${globalData.company.businessDuration} лет`,
