--- a/src/pug/includes/modules/content/massage-results/back.pug
+++ b/src/pug/includes/modules/content/massage-results/back.pug
@@ -33,12 +33,12 @@
       tablet: false,
       mobile: {
         webp: {
-          '1x': 'assets/img/results/back-results_small-1.webp',
-          '2x': false
+          '1x': 'assets/img/results/back-results_small-1@1x.webp',
+          '2x': 'assets/img/results/back-results_small-1@2x.webp'
         },
         jpg: {
-          '1x': 'assets/img/results/back-results_small-1.jpg',
-          '2x': false
+          '1x': 'assets/img/results/back-results_small-1@1x.jpg',
+          '2x': 'assets/img/results/back-results_small-1@2x.jpg'
         }
       }
     },
@@ -47,12 +47,12 @@
       tablet: false,
       mobile: {
         webp: {
-          '1x': 'assets/img/results/back-results_small-2.webp',
-          '2x': false
+          '1x': 'assets/img/results/back-results_small-2@1x.webp',
+          '2x': 'assets/img/results/back-results_small-2@2x.webp'
         },
         jpg: {
-          '1x': 'assets/img/results/back-results_small-2.jpg',
-          '2x': false
+          '1x': 'assets/img/results/back-results_small-2@1x.jpg',
+          '2x': 'assets/img/results/back-results_small-2@2x.jpg'
         }
       }
     },
@@ -61,11 +61,11 @@
       tablet: false,
       mobile: {
         webp: {
-          '1x': 'assets/img/results/back-results_small-3.webp',
+          '1x': 'assets/img/results/back-results_small-3@1x.webp',
           '2x': false
         },
         jpg: {
-          '1x': 'assets/img/results/back-results_small-3.jpg',
+          '1x': 'assets/img/results/back-results_small-3@1x.jpg',
           '2x': false
         }
       }
