--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -126,6 +126,7 @@ block variables
     }
 
 block content
+  include ../includes/modules/main-screen/main-screen
   include ../includes/modules/content/application-form/application-block
   include ../includes/modules/content/features-list
   include ../includes/modules/content/reviews-block
