--- a/src/pug/utils/global-data.pug
+++ b/src/pug/utils/global-data.pug
@@ -193,7 +193,18 @@
         '+7 915 000-63-42'
       ],
       address: `м. Цветной Бульвар<br>1-й Волконский переулок, д.15`,
-      workingHours: `с 9:00 до 21:00<br>без выходных`
+      workingHours: `с 9:00 до 21:00<br>без выходных`,
+      socials: {
+        ig: {
+          link: 'https://www.instagram.com/expert_massage_clinic/'
+        },
+        vk: {
+          link: '#'
+        },
+        fb: {
+          link: '#'
+        }
+      }
     }
   }
 -
