--- a/src/pug/pages/fullbody-massage.pug
+++ b/src/pug/pages/fullbody-massage.pug
@@ -177,6 +177,7 @@ block variables
     }
 
 block content
+  include ../includes/modules/main-screen/main-screen
   include ../includes/modules/content/about-massage
   include ../includes/modules/content/application-form/application-block
   include ../includes/modules/content/reviews-block
