--- a/src/pug/pages/japanese-asahi-massage.pug
+++ b/src/pug/pages/japanese-asahi-massage.pug
@@ -169,6 +169,7 @@ block variables
     }
 
 block content
+  include ../includes/modules/main-screen/main-screen
   include ../includes/modules/content/about-massage
   include ../includes/modules/content/application-form/application-block
   include ../includes/modules/content/massage-results/wrap
