Create articles page

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -118,3 +118,6 @@
 @use 'blocks/page/service-page';
 
 @use 'blocks/contact-info/contact-info';
+
+@use 'blocks/articles-page/articles-page';
+@use 'blocks/articles-page/articles-page-card';
