--- a/src/assets/scss/utils/themes.scss
+++ b/src/assets/scss/utils/themes.scss
@@ -117,6 +117,7 @@ $themes: (
     'secondary-transparent': hsla($theme-main-alt-h, $theme-main-alt-s, $theme-main-alt-l, 0.7),
     'secondary-x-transparent': hsla($theme-main-alt-h, $theme-main-alt-s, $theme-main-alt-l, 0.3),
     'background': hsl(200, 100%, 97%),
+    'background-dark': hsl(200, 100%, 92%),
     'header-image-1': (
       'small': (
         '1x': '../../../img/main-screen/main-bg-1_small@1x.jpg',
