--- a/src/pug/includes/modules/header/main-menu.pug
+++ b/src/pug/includes/modules/header/main-menu.pug
@@ -23,7 +23,7 @@
         url: 'contacts.html'
       },
       {
-        text: 'Полезное',
+        text: 'Интересное',
         url: 'articles.html'
       }
     ],
