--- a/src/assets/scss/blocks/page/page.scss
+++ b/src/assets/scss/blocks/page/page.scss
@@ -3,8 +3,20 @@
 .page {
   height: 100%;
 
+  //noinspection CssOverwrittenProperties,CssInvalidPropertyValue
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    min-height: stretch;
+  }
+
   &__header {
     position: relative;
+  }
+
+  &__content {
+    flex-grow: 1;
   }
 
   &[data-state='noscroll'] {
